[package]
name = "ArcticArch"
version = "1.0.0"
edition = "2021"
description = "ArcticArch is a reverse proxy written in Rust that supports routing requests from a local server to a specified domain. With ArcticArch, you can easily turn a local server running on a specific port, such as `localhost:3000`, into a publicly accessible website connected to `example.com`."
authors = ["Frost-Lord <ceo@frostproxy.com>"]
repository = "https://github.com/Frost-Lord/ArcticArch"
readme = "README.md"
keywords = ["reverse-proxy", "proxy", "https", "ssl", "tls"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
threadpool = "1.8.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.22.0"
rustls = "0.19.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3